# Scarlet-II

./: .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  NETWORKS.md  README.md  THIRD_PARTY.md
assets/networks/: README.md
docs/: LD2_Performance_Audit.md  LeelaRawBackend.md  ModernBStar_manifest.md  Syzygy.md
docs/history/: ModernBStar_v0.6_beta_ru.md  PerfAudit_ModernBStar.md  Release_v0.7.1_ru.md  StrengthValidation_v0.7.1.md
scripts/: bench_ld2_latency.py  build_zen3_avx2_linux.sh  build_zen3_avx2_windows_mingw.bat  regression_v06.sh  regression_v071.sh  run_strength_gate.py  smoke_leela_raw.sh  smoke_leela_windows.bat  smoke_leela_windows.uci  smoke_test_uci.sh  syzygy_smoke.py
src/: dag_backup.hpp  eval.cpp  eval.hpp  leela_raw.cpp  leela_raw.hpp  main.cpp  movegen.cpp  movegen.hpp  nnue_berserk.cpp  nnue_berserk.hpp  perft.cpp  runtime_paths.hpp  search.cpp  search.hpp  syzygy.cpp  syzygy.hpp  syzygy_pyrrhic_adapter.hpp  tt.hpp  types.hpp  uci.cpp  uci.hpp
tests/: core_tests.cpp  uci_async.ps1
